# airope

./: .gitignore  Dockerfile  README.md  hello.py  main.py  pyproject.toml  ruff.toml  runtime.py
agents/: assistant.py  broadcast_agent.py  direct_send.py  image_recognizer.py  mega_agent.py  routed_agent.py  subscribe_agent.py
airope/: main.py  maintk.py
airope/agents/: image.py  image_recognizer.py
airope/endpoints/: fastapi.py  grpc.py
airope/shared/: messages.py  topics.py
airope/tools/: recognize_from_file.py  transform.py  zip_unpack.py
endpoints/: grpc.py
frontend/: package-lock.json  ui_mainwindow.py
shared/: messages.py
tools/: image_from_file.py
